<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>

  <groupId>io.jenkins-x.client</groupId>
  <artifactId>jx-intellij</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Jenkins X Camel IDE :: Parent</name>

  <description>Support for Camel IDE plugins</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.plugin.version>3.6.0</maven.compiler.plugin.version>
    <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
    <maven.checkstyle.version>8.2</maven.checkstyle.version>

    <!-- dependency versions, keep the list A..Z -->
    <camel.version>2.21.1</camel.version>
    <junit.version>4.12</junit.version>
    <hamcrest.version>1.3</hamcrest.version>
    <miglayout.version>5.0</miglayout.version>
    <shrikwrap.version>1.2.6</shrikwrap.version>
    <shrikwrap.resolver.version>2.2.2</shrikwrap.resolver.version>
    <snakeyaml.version>1.6</snakeyaml.version>

    <idea.version>2018.2.2</idea.version>
    <idea.platform.prefix>-Didea.platform.prefix=Idea</idea.platform.prefix>
    <ij.plugin>true</ij.plugin>
    <argLine>
      -ea
      -Xbootclasspath/p:../out/classes/production/boot
      -Xbootclasspath/p:${java.home}/../lib/tools.jar
      -XX:+HeapDumpOnOutOfMemoryError
      -Xmx256m
      -XX:MaxPermSize=320m
      -Didea.system.path=${project.build.directory}/test-system
      -Didea.home.path=${project.build.directory}
      -Didea.config.path=${project.build.directory}/test-config
      -Didea.test.group=ALL_EXCLUDE_DEFINED
      -Didea.load.plugins.id=org.apache.camel
      ${idea.platform.prefix}
    </argLine>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/jenkins-x/jx-intellij-plugin.git</connection>
    <developerConnection>scm:git:git@github.com:jenkins-x/jjx-intellij-plugin.git</developerConnection>
    <url>jenkins-x/jx-intellij-plugin.git</url>
    <tag>0.5.4-SNAPSHOT</tag>
  </scm>

   <profiles>
    <profile>
      <id>ultimate</id>
      <properties>
        <idea.version>2018.2.2</idea.version>
        <!-- PLEASE DON'T DELETE THIS EMPTY TAG. IT'S NECESSARY TO KEEP THIS EMPTY TAG FOR IDEA ULTIMATE! -->
        <idea.platform.prefix></idea.platform.prefix>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.intellij</groupId>
          <artifactId>idea-jsp-openapi</artifactId>
          <version>${idea.version}</version>
          <optional>true</optional>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>com.intellij</groupId>
          <artifactId>jsp-api</artifactId>
          <version>${idea.version}</version>
          <optional>true</optional>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>com.intellij</groupId>
          <artifactId>jsch-0.1.54</artifactId>
          <version>${idea.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>io.jenkins-x.client</groupId>
      <artifactId>jx-java-client</artifactId>
      <version>1.0.4</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>


    <!-- IntelliJ Dependencies -->
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>java-api</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>java_resources_en</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>java-impl</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>openapi</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>platform-api</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>platform-impl</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>idea</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>extensions</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>annotations</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>util</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.jetbrains.plugins</groupId>
      <artifactId>yaml</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij.plugins</groupId>
      <artifactId>properties</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>imgscalr-lib-4.2</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources/</directory>
        <includes>
          <include>META-INF/plugin.xml</include>
          <include>icons/</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
<!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven.checkstyle.plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${maven.checkstyle.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <configuration>
              <configLocation>buildingtools/camel-checkstyle.xml</configLocation>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <linkXRef>false</linkXRef>
              <suppressionsLocation>src/main/resources/checkstyle-suppressions.xml</suppressionsLocation>
              <encoding>UTF-8</encoding>
              <sourceDirectories>
                <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
              </sourceDirectories>
            </configuration>
            <goals>
              <goal>checkstyle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.19.1</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <useManifestOnlyJar>false</useManifestOnlyJar>
              <useSystemClassLoader>true</useSystemClassLoader>
              <argLine>
                @{argLine}
              </argLine>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <descriptors>
            <descriptor>${project.basedir}/src/main/resources/assembly/assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>distribution-package</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
